# tye-pod-dog-discord-bot

./: .gitignore  CMakeLists.txt  README.md  base_redis.cpp  base_redis.hpp  bot.cpp  bot.hpp  coord.hpp  curl_glob_init.cpp  curl_glob_init.hpp  deploy.sh  direction.cpp  direction.hpp  door_button.cpp  door_button.hpp  enum_meta.hpp  gen_uuid.cpp  gen_uuid.hpp  gpt3_bot.cpp  gpt3_bot.hpp  guild.cpp  guild.hpp  hero.cpp  hero.hpp  heroes_list.cpp  heroes_list.hpp  item.cpp  item.hpp  main.cc  player.cpp  player.hpp  pos.hpp  read_token.cpp  read_token.hpp  redis_con.cpp  redis_con.hpp  room.cpp  room.hpp  send_msg_cb.hpp  twitch.cpp  (+4 more)
doc/: doc.md
